--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,12 @@
     <FrameLayout
         android:id="@+id/flContent"
         android:layout_width="350dp"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
     <FrameLayout
         android:id="@+id/flDetailContent"
-        android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        />
+        android:layout_weight="1" />
 
 </LinearLayout>
